# rpc3dl

./: .gitignore  README.md  findscu.sh  movescu.sh  pyproject.toml  requirements.txt  setup.cfg
jupyter/: Untitled.ipynb  align_dose.ipynb  extraction_development.ipynb  initial_data_align.ipynb  patient_distribution.ipynb  patient_summary.csv  sandbox.ipynb  survey_data_handling.ipynb
jupyter/.ipynb_checkpoints/: patient_characteristics-checkpoint.ipynb  sandbox-checkpoint.ipynb
main/preprocessing/: extract_arrays.py  label_prepare.py
main/training/: _utils.py  build_model.py  main.py
src/outcomeDL/: README.md  __init__.py
src/outcomeDL/anon/: anon.py  basic_profile.py  dummy.py  lookups.py
src/outcomeDL/files/: dicom.py  dicom_filter.py  log.txt  main.py  migrate_cli.py
src/outcomeDL/preprocessing/: CTHandler.py  PatientArray.py  Preprocessor.py  _classes.py  _preprocess_util.py  extract_arrays.py  generate_labels.py  label_prepare_nonAnon.py  legacy_label_prepare.py  main_preprocess.py  preprocess.sh  run.py  tester.py
src/outcomeDL/training/: _utils.py  build_model.py  generator.py  legacy_main.py  main.py
src/rpc3dl/: __init__.py
src/rpc3dl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/rpc3dl/anon/: __init__.py  anon.py
src/rpc3dl/files/: __init__.py  _dicom_util.py  dicom_filter.py  migrate_cli.py
src/rpc3dl/gui/: gui_objects.py  main.py  popups.py  tkinter.py
src/rpc3dl/preprocessing/: PatientDB.py  __init__.py  _preprocess_util.py  arrayclasses.py  data_augmentation.py  (+5 more)
supportfiles/: Untitled.ipynb  analyze_datastats.ipynb  data_augmentation.ipynb  data_utils.py  filechecktools.py  generate_data_align_stats.py  goodtogo.csv  goodtogo2.csv  misc_checks.py  needsreview.csv  needsreview2.csv  package_nrrd.py  patient_distribution.ipynb  patient_summary.csv  sandbox.py  test.json  test.nrrd
supportfiles/nondicom_processing/: EDA.ipynb  anon_only_mappings_no_PII.xlsx  clean_readable_db.csv  cleaned_db.csv  db_cleaning.ipynb
(+17 files in other folders)
