[metadata]
name = rpc3dl
version = 0.1.0
author = John Asbach
author_email = john.asbach@gmail.com
description = Set of scripts and functions to allow deep learning outcome research on DICOM files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UBRoswellMedPhys/outcomeDL
project_urls =
    Bug Tracker = https://github.com/UBRoswellMedPhys/outcomeDL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Custom
    Operating System :: OS Independent
license_files = 
    LICENSE.txt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rpc3dl-prep-labels = rpc3dl.preprocessing.generate_labels:main
    rpc3dl-preprocess = rpc3dl.preprocessing.run:main
    rpc3dl-filefilter = rpc3dl.files.migrate_cli:main
    rpc3dl-anon = rpc3dl.anon.anon:main